--- a/bank.html
+++ b/bank.html
@@ -56,6 +56,8 @@
   </div>
 
 <script>
+const API_BASE = "https://cyvathon-bank.onrender.com"; // your backend URL
+
 let currentUser = null;
 
 // LOGIN FUNCTION
@@ -65,7 +67,7 @@ async function login() {
 
   if (!user || !pass) return alert("Fill all fields");
 
-  const res = await fetch("/login", {
+  const res = await fetch(API_BASE + "/login", {
     method: "POST",
     headers: {"Content-Type": "application/json"},
     body: JSON.stringify({ username: user, password: pass })
